# odysseus

./: .gitignore  app.py  pyproject.toml  requirements-dev.txt  setup.py
.github/: dependabot.yml
app_setup/: __init__.py  auth.py  request_timeout.py  static_files.py
core/: auth.py  constants.py  database.py  exceptions.py  models.py  platform_compat.py  session_manager.py
frontend/: .gitignore  README.md  eslint.config.mjs  nuxt.config.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json  tauri.sidecar.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs  main.rs
mcp_servers/: email_server.py  image_gen_server.py  memory_server.py  rag_server.py
routes/: admin_wipe_routes.py  api_token_routes.py  assistant_routes.py  auth_routes.py  backup_routes.py  calendar_routes.py  chat_helpers.py  chat_routes.py  cleanup_routes.py  compare_routes.py  contacts_routes.py  cookbook_helpers.py  cookbook_routes.py  diagnostics_routes.py  document_helpers.py  document_routes.py  editor_draft_routes.py  email_helpers.py  email_html.py  email_pollers.py  email_routes.py  embedding_routes.py  font_routes.py  gallery_helpers.py  gallery_routes.py  history_routes.py  hwfit_routes.py  mcp_routes.py  memory_routes.py  model_routes.py  note_routes.py  personal_routes.py  prefs_routes.py  preset_routes.py  research_routes.py  search_routes.py  session_routes.py  shell_routes.py  signature_routes.py  skills_routes.py  (+6 more)
src/: action_intents.py  agent_loop.py  agent_runs.py  config.py  (+60 more)
(+149 files in other folders)
