[package]
name = "odysseus"
version = "0.1.0"
description = "Odysseus desktop shell"
authors = ["Odysseus"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "odysseus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
